--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.0.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.0-beta.2",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-scripts": "4.0.3",
