--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.0.2",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.0.0-beta.2",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
